libx264: update to newer version

--- a/captive/libx264/csrc/AUTHORS
+++ b/captive/libx264/csrc/AUTHORS
@@ -47,8 +47,8 @@ E: hengar-6 AT student DOT ltu DOT se
 D: 4:2:2 chroma subsampling, x86 asm
 S: Sweden
 
-N: Jason Garrett-Glaser
-E: darkshikari AT gmail DOT com
+N: Fiona Glaser
+E: fiona AT x264 DOT com
 D: x86 asm, 1pass VBV, adaptive quantization, inline asm
 D: various speed optimizations, bugfixes
 S: USA
